[package]
name          = "itf"
version       = "0.2.2"
edition       = "2021"
license       = "Apache-2.0"
readme        = "README.md"
authors       = ["Informal Systems <hello@informal.sytems>"]
keywords      = ["apalache", "serialization", "trace"]
description   = "Library for consuming Apalache ITF traces"
repository    = "https://github.com/informalsystems/itf-rs"
documentation = "https://docs.rs/itf"
rust-version  = "1.65"

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = { version = "0.2" }
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_with = { version = "3.4.0" }
