[package]
name = "apalache-itf"
version = "0.1.0"
edition = "2021"

[dependencies]
apalache-itf-derive = { version = "0.1.0", path = "../apalache-itf-derive" }

itertools.workspace = true
num-bigint.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
