[package]
name = "apalache-itf"
version = "0.1.0"
edition = "2021"

[dependencies]
apalache-itf-derive = { version = "0.1.0", path = "../apalache-itf-derive" }

num-bigint = { version = "0.4.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
