[package]
name = "serde-itf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.4", features = ["serde"] }
num-traits = "0.2.17"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["raw_value"] }
